--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -8,6 +8,8 @@ ___________________
 body {
   font-family: 'Karla', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 7.5vw;
+  background-color: white;
+  color: black;
   @include breakpoint( medium up ) {
     font-size: 4.5vw;
   }
@@ -27,7 +29,6 @@ section {
   padding: 16px 8px 24px;
   display: flex;
   flex-flow: row wrap;
-  background-color: snow;
   overflow: auto;
   @include breakpoint( medium up ) {
     padding: 40px 16px;
@@ -45,6 +46,7 @@ section {
 }
 
 .panel--bottom {
+  padding-top: 32px;
   margin-top: auto;
 }
 
@@ -73,7 +75,7 @@ ________________
 
 a,
 a:visited {
-  color: #000;
+  color: inherit;
   text-decoration: none;
 }
 
